Se configura appsettings.json y cadena de conexion en clase program

--- a/ApiCandidatos/appsettings.json
+++ b/ApiCandidatos/appsettings.json
@@ -2,8 +2,56 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.EntityFrameworkCore": "Error",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Default": "Debug"
+      }
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
+    },
+    "AzureMonitor": {
+      "InstrumentationKey": "your-instrumentation-key-here"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "your-instrumentation-key-here",
+    "EnableTelemetry": true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-PH1R9POH;Initial Catalog=ApiCandidatos;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "FeatureFlags": {
+    "EnableBetaFeatures": false,
+    "EnableExperimentalFeatures": true
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/myapp.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ]
+  }
 }
